--- a/SimpleAudioRecorder/Info.plist
+++ b/SimpleAudioRecorder/Info.plist
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs the microphone to create audio recordings.</string>
 </dict>
 </plist>
